--- a/Capitolo 6/Metodi/Metodi.csproj
+++ b/Capitolo 6/Metodi/Metodi.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calcolatore.cs" />
+    <Compile Include="LocalFunction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ricorsione.cs" />
